@@ -99,7 +99,7 @@
 <a href="#antpublisher">&lt;antpublisher&gt;</a>
 <a href="#artifactspublisher">&lt;artifactspublisher&gt;</a>
 <a href="#bootstrappers">&lt;bootstrappers&gt;</a>
-<a href="#builders">&lt;builders&gt;</a>
+<a href="#composite">&lt;composite&gt;</a>
 <a href="#buildstatus">&lt;buildstatus&gt;</a>
 <a href="#clearcase">&lt;clearcase&gt;</a>
 <a href="#clearcasebaselinepublisher">&lt;clearcasebaselinepublisher&gt;</a>
@@ -284,7 +284,7 @@
          <a href="#pause">&lt;pause/&gt;</a>
          <a href="#nant">&lt;nant/&gt;</a>
          <a href="#exec">&lt;exec/&gt;</a>
-         <a href="#builders">&lt;builders/&gt;</a>
+         <a href="#composite">&lt;composite/&gt;</a>
       &lt;/schedule&gt;
       <a href="#log">&lt;log&gt;</a>
          <a href="#merge">&lt;merge/&gt;</a>
@@ -5067,14 +5067,14 @@ endlocal</pre>
 
         <div class="elementdocumentation">
         <a class="toplink" href="#top">top</a>
-        <h2><a name="builders">&lt;builders&gt;</a></h2>
+        <h2><a name="composite">&lt;composite&gt;</a></h2>
 
         <div class="hierarchy">
             <pre>
 <a href="#cruisecontrol">&lt;cruisecontrol&gt;</a>
   <a href="#project">&lt;project&gt;</a>
     <a href="#schedule">&lt;schedule&gt;</a>
-      &lt;builders&gt;</pre>
+      &lt;composite&gt;</pre>
         </div>
 
         <p>The CompositeBuilder executes a list of builders. This is necessary
