@@ -51,7 +51,7 @@ vssjournal=net.sourceforge.cruisecontrol.sourcecontrols.VssJournal
 
 # builders
 ant=net.sourceforge.cruisecontrol.builders.AntBuilder
-builders=net.sourceforge.cruisecontrol.builders.CompositeBuilder
+composite=net.sourceforge.cruisecontrol.builders.CompositeBuilder
 exec=net.sourceforge.cruisecontrol.builders.ExecBuilder
 maven=net.sourceforge.cruisecontrol.builders.MavenBuilder
 maven2=net.sourceforge.cruisecontrol.builders.Maven2Builder
